--- a/alurabooks/styles/topicos.css
+++ b/alurabooks/styles/topicos.css
@@ -30,4 +30,18 @@
     font-weight: 700;
 }
 
+@media screen and (min-width: 1024px){
+    .topicos__titulo,
+    .topicos__link{
+        font-size: 24px;
+    }
+
+}
+
+@media screen and (min-width: 1728px){
+    .topicos{
+        padding: 3em 25vw;
+    }
+}
+
 
