Finalização da Parte 1

--- a/acessibilidadefrontend/css/contatoCampo.css
+++ b/acessibilidadefrontend/css/contatoCampo.css
@@ -27,7 +27,9 @@
 }
 
 .contatoCampo-checkbox {
-  display: none;
+  position: absolute;
+  left: -9999px;
+  opacity: 0;
 }
 
 .contatoCampo-icone {
