--- a/Formação_HTML_CSS/7DaysOfCoding/styles/nav-bar.css
+++ b/Formação_HTML_CSS/7DaysOfCoding/styles/nav-bar.css
@@ -16,7 +16,7 @@
     height: 27px;
 }
 
-.nav-logo h2{
+.nav-logo span{
     margin-left: 8px;
     font-size: 18px;
     color: #3A404E;
@@ -32,7 +32,7 @@
 }
 
 #nav-item{
-    color: var(--cor-do-paragrafo);
+    color: var(--cor-do-texto);
     padding: 0 0 0 32px;
 }
 
@@ -43,7 +43,7 @@
 
 .nav-entrar{
     
-    color: var(--cor-do-paragrafo);
+    color: var(--cor-do-texto);
 }
 
 .nav-login h3{
@@ -56,7 +56,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    background-color: var(--vermelho-destaque);
+    background-color: var(--cor-principal);
     color: #FFFFFF;
     width: 112px;
     height: 44px;
