--- a/Formação_HTML_CSS/7DaysOfCoding/style.css
+++ b/Formação_HTML_CSS/7DaysOfCoding/style.css
@@ -1,6 +1,6 @@
 @import url("styles/nav-bar.css");
 @import url("styles/header.css");
-@import url("styles/section.css");
+@import url("styles/sections.css");
 
 :root{
     --fonte-principal: "Inter";
