Finalizada a seção de vagas

--- a/Formação_HTML_CSS/7DaysOfCoding/style.css
+++ b/Formação_HTML_CSS/7DaysOfCoding/style.css
@@ -6,7 +6,8 @@
     --fonte-principal: "Inter";
     --cor-do-texto: #667085;
     --cor-principal: #8E2424;
-    
+    --cor-texto-vaga: #101828;
+
 
 }
 
